--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,120 @@ svg {
   fill: var(--accent-color);
 }
 
+/* HERO-forms */
+
+.user-data {
+  padding: 40px;
+}
+
+.modal-caption {
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 448px;
+  outline: 2px solid tomato;
+}
+
+.form-field {
+  outline: 2px solid palevioletred;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+
+  margin-bottom: 10px;
+  /* останній дитині прибрати маржин(розділу коментар, бо в нього він 20px */
+}
+
+.form-field label {
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+}
+
+.form-field input {
+  padding: 12px 16px;
+  width: 100%;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-field:nth-child(4) {
+  margin-bottom: 20px;
+}
+
+.form-field input::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-field textarea {
+  padding: 12px 16px;
+
+  resize: none;
+
+  width: 100%;
+  height: 120px;
+}
+
+.checkbox-stylization {
+  margin-bottom: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 425px;
+}
+
+.checkbox-stylization input [type='checkbox'] {
+}
+
+.checkbox-stylization label {
+  width: 401px;
+
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+}
+
+.link-agreement {
+  color: var(--accent-color);
+}
+
+.form-button {
+  padding: 10px 52px;
+  min-width: 200px;
+
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+
+  color: var(--primary-bgr-color);
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 0;
+  border-radius: 4px;
+  border-color: transparent;
+
+  transition: 250ms background-color cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover {
+  background-color: #188ce8;
+}
+
 /* features box */
 
 .list-box .caption-text {
@@ -608,7 +722,7 @@ svg {
 
   color: var(--link-color);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-attention:hover,
