--- a/css/styles.css
+++ b/css/styles.css
@@ -688,6 +688,7 @@ svg {
 .footer-section > .container {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .foot-box {
@@ -753,8 +754,46 @@ svg {
   text-decoration: none;
 }
 
+/* form-footer */
+
 .subscribe {
   width: 570px;
+}
+
+.form-footer {
+  display: flex;
+}
+
+.footer-email {
+  width: 358px;
+  margin-right: 12px;
+  padding: 15px 16px;
+
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-email::placeholder {
+  color: #ffffff99;
+}
+
+.subscribe-button {
+  display: flex;
+  align-items: center;
+  width: 200px;
+  padding: 10px 28px;
+
+  font-weight: 700;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  color: #ffffff;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: transparent;
 }
 
 /* Button для порфолио*/
