задає ховер футеру

--- a/css/styles.css
+++ b/css/styles.css
@@ -796,6 +796,10 @@ svg {
   border: transparent;
 }
 
+.subscribe-button:hover {
+  background-color: #188ce8;
+}
+
 /* Button для порфолио*/
 
 .button {
