--- a/css/styles.css
+++ b/css/styles.css
@@ -769,6 +769,7 @@ svg {
   margin-right: 12px;
   padding: 15px 16px;
 
+  color: var(--secondary-text-color);
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
