--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,8 @@ svg {
 
   width: 100%;
   height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
 }
 
 .checkbox-stylization {
