--- a/css/styles.css
+++ b/css/styles.css
@@ -785,6 +785,7 @@ svg {
 .subscribe-button {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 200px;
   padding: 10px 28px;
 
@@ -797,6 +798,8 @@ svg {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: transparent;
+
+  transition: 250ms background-color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-button:hover {
