--- a/css/styles.css
+++ b/css/styles.css
@@ -348,10 +348,13 @@ svg {
   width: 100%;
 
   margin-bottom: 10px;
-  /* останній дитині прибрати маржин(розділу коментар, бо в нього він 20px */
 }
 
-.form-field label {
+.form-field:nth-child(5) {
+  margin-bottom: 20px;
+}
+
+.form-info {
   margin-bottom: 4px;
 
   font-size: 12px;
@@ -359,7 +362,7 @@ svg {
   letter-spacing: 0.01em;
 }
 
-.form-field input {
+.form-input {
   padding: 12px 16px;
   width: 100%;
 
@@ -367,15 +370,7 @@ svg {
   border-radius: 4px;
 }
 
-.form-field:nth-child(4) {
-  margin-bottom: 20px;
-}
-
-.form-field input::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.form-field textarea {
+.form-textarea {
   padding: 12px 16px;
 
   resize: none;
@@ -384,6 +379,13 @@ svg {
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+}
+
+.form-textarea::placeholder {
+  font-size: 12px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .checkbox-stylization {
@@ -774,7 +776,8 @@ svg {
 }
 
 .footer-email::placeholder {
-  color: #ffffff99;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .subscribe-button {
