--- a/css/styles.css
+++ b/css/styles.css
@@ -337,11 +337,9 @@ svg {
   flex-direction: column;
   align-items: center;
   width: 448px;
-  outline: 2px solid tomato;
 }
 
 .form-field {
-  outline: 2px solid palevioletred;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -354,6 +352,14 @@ svg {
   margin-bottom: 20px;
 }
 
+.form-field:focus-within > .form-input {
+  border-color: var(--accent-color);
+}
+
+.form-input:focus-visible {
+  outline: 0;
+}
+
 .form-info {
   margin-bottom: 4px;
 
@@ -363,7 +369,7 @@ svg {
 }
 
 .form-input {
-  padding: 12px 16px;
+  padding: 12px 16px 12px 42px;
   width: 100%;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -379,6 +385,14 @@ svg {
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+}
+
+.form-field:focus-within > .form-textarea {
+  border-color: var(--accent-color);
+}
+
+.form-textarea:focus-visible {
+  outline: 0;
 }
 
 .form-textarea::placeholder {
@@ -773,6 +787,14 @@ svg {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+}
+
+.form-footer:focus-within .footer-email {
+  border-color: var(--accent-color);
+}
+
+.footer-email:focus-visible {
+  outline: 0;
 }
 
 .footer-email::placeholder {
