--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,8 @@ svg {
 }
 
 .form-field {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -374,6 +376,16 @@ svg {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+}
+
+.form-picture {
+  position: absolute;
+  bottom: 13px;
+  left: 12px;
+}
+
+.form-field:focus-within .form-picture {
+  fill: var(--accent-color);
 }
 
 .form-textarea {
