--- a/css/styles.css
+++ b/css/styles.css
@@ -462,7 +462,7 @@ svg {
 
 .form-check {
   border: 2px solid var(--title-text-color);
-  border-radius: 25%;
+  border-radius: 2px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
