--- a/css/styles.css
+++ b/css/styles.css
@@ -460,21 +460,39 @@ svg {
   letter-spacing: 0.03em;
 }
 
-.form-check {
+.check-container {
+  /* position: relative;
+  width: 16px;
+  height: 15px; */
+
   border: 2px solid var(--title-text-color);
   border-radius: 2px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked + .form-check {
+.form-check {
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:checked + .check-container {
   fill: currentColor;
   background-color: var(--accent-color);
   border-color: var(--accent-color);
-  transition: fill, background-color, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:not(checked) + .form-check {
-  transition: fill, background-color, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.checkbox:checked + .check-container .form-check {
+  /* position: absolute;
+  top: 0;
+  left: 0;
+
+  background-size: contain;
+  background-position: center; */
+
+  opacity: 1;
 }
 
 .link-agreement {
