--- a/css/styles.css
+++ b/css/styles.css
@@ -461,9 +461,13 @@ svg {
 }
 
 .check-container {
-  /* position: relative;
+  position: relative;
   width: 16px;
-  height: 15px; */
+  height: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   border: 2px solid var(--title-text-color);
   border-radius: 2px;
@@ -471,6 +475,8 @@ svg {
 }
 
 .form-check {
+  position: absolute;
+
   opacity: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -485,13 +491,6 @@ svg {
 }
 
 .checkbox:checked + .check-container .form-check {
-  /* position: absolute;
-  top: 0;
-  left: 0;
-
-  background-size: contain;
-  background-position: center; */
-
   opacity: 1;
 }
 
